<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".MainActivity">

    <Button
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="468dp"
        android:onClick="fot"
        android:text="@string/button_text"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="324dp"
        android:layout_height="25dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="144dp"
        android:text="@string/text_view2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="176dp"
        android:text="@string/text_view3"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="104dp"
        android:text="@string/text_view1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="279dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="268dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_1"
        android:inputType="textEmailAddress"
        android:textColorHint="#8000ff"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="277dp"
        android:layout_height="49dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="356dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_2"
        android:inputType="textPassword"
        android:textColorHint="#8000ff"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="248dp"
        android:text="@string/text_view4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="336dp"
        android:text="@string/text_view5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="176dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/text_view6"
        android:textColor="#8000ff"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="276dp"
        android:contentDescription="TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_action_email"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="368dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_idle_lock"
        android:importantForAccessibility="no" />

</androidx.constraintlayout.widget.ConstraintLayout>